--- a/mod.css
+++ b/mod.css
@@ -14,7 +14,7 @@
 @import url(https://getbricked.github.io/Hyprcord/Themes/forum.css);
 @import url(https://getbricked.github.io/Hyprcord/Themes/nameplate.css);
 @import url(https://getbricked.github.io/Hyprcord/Themes/server.css);
-@import url(https://getbricked.github.io/Hyprcord/Themes/global.css);
+@import url(https://631373.github.io/global.css);
 
 /* SETTINGS */
 :root {
