--- a/theme.css
+++ b/theme.css
@@ -13,8 +13,8 @@
 @import url('https://mwittrien.github.io/BetterDiscordAddons/Themes/ServerColumns/ServerColumns.css');
 @import url('https://fonts.googleapis.com/css2?family=Consolas');
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@540&display=swap');
-/* @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@550&display=swap'); */
-/* @import url('https://raw.githubusercontent.com/DiscordStyles/HorizontalServerList/deploy/HorizontalServerList.theme.css'); */
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@550&display=swap'); */
+@import url('https://raw.githubusercontent.com/DiscordStyles/HorizontalServerList/deploy/HorizontalServerList.theme.css'); */
 
 /*SETTINGS*/
 :root {
