--- a/theme.css
+++ b/theme.css
@@ -17,8 +17,8 @@
 /*SETTINGS*/
 :root {
   /* ACCENT COLORS */
-  --main-color: rgba(150, 150, 150, 0.5); /* main accent color (hex, rgb or hsl) [default: #2780e6] */
-  --hover-color: #AAAAAA; /* hover accent color (hex, rgb or hsl) [default: #1e63b3] */
+  --main-color: rgba(200, 200, 200, 0.5); /* main accent color (hex, rgb or hsl) [default: #2780e6] */
+  --hover-color: rgba(225, 225, 225, 0.5); /* hover accent color (hex, rgb or hsl) [default: #1e63b3] */
   --success-color: #43b581; /* positive accent color (hex, rgb or hsl) [default: #43b581] */
   --danger-color: #982929; /* danger accent color (hex, rgb or hsl) [default: #982929] */
 
@@ -36,6 +36,7 @@
   --background-size: cover; /* app background size (px) [default: cover] */
   --background-attachment: fixed; /* app background attachment [default: fixed] */
   --background-filter: blur(10px) saturate(calc(var(--saturation-factor, 1) * 1.13)) brightness(0.75); /* app background adjustments (ex: blur, saturation, brightness) (more info: https://developer.mozilla.org/en-US/docs/Web/CSS/filter) [default: saturate(calc(var(--saturation-factor, 1) * 1))] */
+  --background-color: rgb(255, 255, 255); /*
   
   /* USER POPOUT BACKGROUND */
   --user-popout-image: var(--background-image); /* user popout background image (link must be HTTPS) (not applied to nitro users) [default: var(--background-image)] */
@@ -60,7 +61,7 @@
   --code-font: Consolas; /* font for codeblocks (font must be installed) [default: Consolas, Liberation Mono, Menlo, Courier, monospace] */
 
   /* CHANNEL COLORS */
-  --channel-normal: #BBBBBB; /* channel text color [default: var(--interactive-normal)] */
+  --channel-normal: #CCCCCC; /* channel text color [default: var(--interactive-normal)] */
   --channel-muted: #555555; /* muted channel text color [default: var(--interactive-muted)] */
   --channel-hover: #DDDDDD; /* hovered channel text color [default: var(--interactive-hover)] */
   --channel-selected: #EEEEEE; /* selected channel text color [default: var(--interactive-active)] */
@@ -78,7 +79,7 @@
 
   /* SERVER COLUMNS */
   --columns: 1;
-  --global-margin: 5px;
+  --global-margin: 0px;
   --guildsize: 0px;
   --bordersize: 0px;
   --aligndms: 0px;
@@ -92,8 +93,9 @@
 /* CATEGORY NAMES */
 .name__29444 {
   color: rgb(255, 255, 255);
-  text-shadow: #FFFFFF 0px 0px 5px;
+  text-shadow: #000000 0px 0px 5px;
 }
 /* CHANGE URL COLOR */
 .markup__75297 .anchor_edefb8 {
   color: rgba(255, 255, 255, 1);
+
