--- a/mod.css
+++ b/mod.css
@@ -9,9 +9,9 @@
  */
 
 /* IMPORT SOURCE (Themes) */
-@import url(https://getbricked.github.io/Hyprcord/Themes/forum.css);
-@import url(https://getbricked.github.io/Hyprcord/Themes/nameplate.css);
-@import url(https://getbricked.github.io/Hyprcord/Themes/server.css);
+@import url(https://631373.github.io/forum.css);
+@import url(https://631373.github.io/nameplate.css);
+@import url(https://631373.github.io/server.css);
 @import url(https://631373.github.io/global.css);
 
 /* SETTINGS */
