--- a/temp.css
+++ b/temp.css
@@ -4193,8 +4193,8 @@ code {
   --font-display: var(--main-font);
   --font-code: var(--code-font);
   --focus-primary: var(--focus-color);
-  --main-color: #2780e6;
-  --hover-color: #1e63b3;
+  --main-color: #ffffff75;
+  --hover-color: #ffffffbb;
   --success-color: #43b581;
   --warning-color: #fff;
   --danger-color: #982929;
