--- a/theme.css
+++ b/theme.css
@@ -1,19 +1,3 @@
-/**
- * @name Global Communications Service
- * @author delete
- * @version WAN
- * @description Communications Service for Wide World I.
- * @source https://github.com/631373/631373.github.io
- * @website 631373.github.io
- * @invite NO
- */
-/* IMPORT CSS */
-@import url(https://631373.github.io/main.css);
-@import url(https://631373.github.io/vencord.css);
-@import url(https://631373.github.io/theme.css);
-@import url(https://631373.github.io/mod.css);
-@import url(https://631373.github.io/global.css);
-
 /*SETTINGS*/
 :root {
   /* ACCENT COLORS */
@@ -53,7 +37,7 @@
   --user-modal-filter: blur(30px) saturate(calc(var(--saturation-factor, 1) * 1.13)) brightness(0.45); /* user modal background adjustments (ex: blur, saturation, brightness) (more info: https://developer.mozilla.org/en-US/docs/Web/CSS/filter) [default: var(--background-filter);] */
   
   /* HOME ICON */
-  --home-icon: url(https://i.imgur.com/hVo3BT9.png); /* home button icon (link must be HTTPS) [default: url(https://clearvision.github.io/icons/discord.svg)]*/
+  --home-icon: url(https://cdn.discordapp.com/emojis/1331084534980153376.webp); /* home button icon (link must be HTTPS) [default: url(https://clearvision.github.io/icons/discord.svg)]*/
   --home-size: cover; /* home button icon size (px) [default:cover] */
 
   /* FONTS */
@@ -84,18 +68,4 @@
   --bordersize: 0px;
   --aligndms: 0px;
 }
-
-/* ADD ADDITIONAL CSS BELOW HERE */
-
-.visual-refresh.refresh-fast-follow-guild-bg .bg__960e4 {
-    background: var(--background-image);  
-}
-/* CATEGORY NAMES */
-.name__29444 {
-  color: rgb(255, 255, 255);
-  text-shadow: #000000 0px 0px 5px;
-}
-/* CHANGE URL COLOR */
-.markup__75297 .anchor_edefb8 {
-  color: rgba(255, 255, 255, 1);
 
